--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,6 +24,6 @@
   }
 
   button {
-    @apply shadow-xl shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#5651e5] to-[#709dff] text-white
+    @apply shadow-xl shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#f0a10e] to-[#ffd771] text-white
   }
 }
